Add small SAM file with toy reads.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73277 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,4 +15,5 @@ Imports: methods, utils, igraph,
 	 GenomicFeatures, Rsamtools
 Suggests: graph, Rgraphviz, Gviz, TxDb.Mmusculus.UCSC.mm9.knownGene, RUnit
 Collate: splicingGraphs.R
+	 toy_data.R
 biocViews: Genetics, Annotation, HighThroughputSequencing
