Complete workflow for unambiguous hit counts.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73299 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ import(Rsamtools)
 
 export(
   Spath,
+  UAhc,
   Sgdf,
   Sgraph,
   uninformativeSSids,
@@ -28,6 +29,7 @@ export(
 
 exportMethods(
   Spath,
+  UAhc,
   Sgdf,
   Sgraph,
   uninformativeSSids
