Rename UAhc -> UATXHcount (UnAmbiguous Transcript Hit count).
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73369 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ import(Rsamtools)
 
 export(
   Spath,
-  UAhc,
+  UATXHcount,
   Sgdf,
   Sgraph,
   uninformativeSSids,
@@ -29,7 +29,7 @@ export(
 
 exportMethods(
   Spath,
-  UAhc,
+  UATXHcount,
   Sgdf,
   Sgraph,
   uninformativeSSids
