add make_Ragraph_from_graphNEL() internal utility
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73443 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ Imports: methods, utils, igraph,
          BiocGenerics, IRanges, GenomicRanges,
 	 GenomicFeatures, Rsamtools
 Suggests: graph, Rgraphviz, Gviz, TxDb.Mmusculus.UCSC.mm9.knownGene, RUnit
-Collate: splicingGraphs.R
+Collate: utils.R
+	 splicingGraphs.R
 	 countReads.R
 	 toy_data.R
 biocViews: Genetics, Annotation, HighThroughputSequencing
