depends on graph and Rgraphviz again
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73447 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,10 @@ importFrom(igraph, graph.data.frame, get.data.frame, layout.kamada.kawai,
 import(BiocGenerics)
 import(IRanges)
 import(GenomicRanges)
+
+import(graph)
+import(Rgraphviz)
+
 import(GenomicFeatures)
 import(Rsamtools)
 
