--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SplicingGraphs
 Title: Tools for creating splicing graphs from annotations and RNA-Seq data
-Version: 0.2.0
+Version: 0.2.1
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package provides tools for creating splicing graphs based on
@@ -9,11 +9,11 @@ Description: This package provides tools for creating splicing graphs based on
 	RNA-seq experiments. 
 Maintainer: H. Pages <hpages@fhcrc.org>
 Depends: BiocGenerics, IRanges (>= 1.17.31), GenomicRanges,
-	 GenomicFeatures (>= 1.11.8), Rsamtools
+	 Rgraphviz (>= 2.3.7), GenomicFeatures (>= 1.11.8), Rsamtools
 Imports: methods, utils, igraph,
-         BiocGenerics, IRanges, GenomicRanges,
-	 GenomicFeatures, Rsamtools
-Suggests: graph, Rgraphviz, Gviz, TxDb.Mmusculus.UCSC.mm9.knownGene, RUnit
+	 BiocGenerics, IRanges, GenomicRanges,
+	 graph, Rgraphviz, GenomicFeatures, Rsamtools
+Suggests: Gviz, TxDb.Mmusculus.UCSC.mm9.knownGene, RUnit
 Collate: utils.R
 	 splicingGraphs.R
 	 countReads.R
