o Replace Sgraph() and Sgraph2() arg 'as.graphNEL' with 'as.Ragraph'. o Remove plotSgraph() and plotSgraph2(). Using plot() instead.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73469 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ import(BiocGenerics)
 import(IRanges)
 import(GenomicRanges)
 
-import(graph)
-import(Rgraphviz)
+importFrom(graph, nodeDataDefaults, nodeData,
+                  edgeDataDefaults, edgeNames, edgeData)
+
+importFrom(Rgraphviz, agopen)
 
 import(GenomicFeatures)
 import(Rsamtools)
@@ -23,7 +25,6 @@ export(
   uninformativeSSids,
   Sgdf2,
   Sgraph2,
-  plotSgraph, plotSgraph2,
   splicingGraphs,
 
   assignSubfeatureHits,
