o Sgraph() and Sgraph2() now return an Ragraph object by default, instead of an   igraph object. o Replace their 'as.Ragraph' arg with 'as.igraph' (default value is FALSE).
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73474 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Depends: BiocGenerics, IRanges (>= 1.17.31), GenomicRanges,
 Imports: methods, utils, igraph,
 	 BiocGenerics, IRanges, GenomicRanges,
 	 graph, Rgraphviz, GenomicFeatures, Rsamtools
-Suggests: Gviz, TxDb.Mmusculus.UCSC.mm9.knownGene, RUnit
+Suggests: igraph, Gviz, TxDb.Mmusculus.UCSC.mm9.knownGene, RUnit
 Collate: utils.R
 	 splicingGraphs.R
 	 countReads.R
