- Define and use the SplicingGraphs S4 container for storing the splicing   graphs instead of of a bare GRangesList object. - Replace splicingGraphs() function by SplicingGraphs() constructor. - Make length(), names(), elementLengths(), plot(), findOverlaps(), and   encodeOverlaps() work on SplicingGraphs objects by defining appropriate   methods. - Replace "Spath" and "UATXHcount" methods for GRangesList objects by methods   for SplicingGraphs objects.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73827 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,8 @@ importFrom(Rgraphviz, agopen)
 import(GenomicFeatures)
 import(Rsamtools)
 
+exportClasses(SplicingGraphs)
+
 export(
   Spath,
   UATXHcount,
@@ -25,7 +27,7 @@ export(
   uninformativeSSids,
   Sgdf2,
   Sgraph2,
-  splicingGraphs,
+  SplicingGraphs,
 
   assignSubfeatureHits,
 
@@ -37,9 +39,15 @@ export(
 )
 
 exportMethods(
+  length,
+  names,
+  elementLengths,
   Spath,
   UATXHcount,
   Sgdf,
   Sgraph,
-  uninformativeSSids
+  uninformativeSSids,
+  plot,
+  findOverlaps,
+  encodeOverlaps
 )
