--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SplicingGraphs
 Title: Tools for creating splicing graphs from annotations and RNA-Seq data
-Version: 0.2.3
+Version: 0.3.0
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package provides tools for creating splicing graphs based on
@@ -15,7 +15,7 @@ Imports: methods, utils, igraph,
 	 graph, Rgraphviz, GenomicFeatures, Rsamtools
 Suggests: igraph, Gviz, TxDb.Mmusculus.UCSC.mm9.knownGene, RUnit
 Collate: utils.R
-	 splicingGraphs.R
+	 SplicingGraphs-class.R
 	 countReads.R
 	 toy_data.R
 biocViews: Genetics, Annotation, HighThroughputSequencing
