- Split SplicingGraphs-class.R in 3 files: SplicingGraphs-class.R,   sgdf-methods.R, and sgraph-methods.R. And split the corresponding man page   accordingly. - Rename Spath(), Sgdf(), Sgraph() -> spath(), sgdf(), sgraph().
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73836 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,8 @@ Imports: methods, utils, igraph,
 Suggests: igraph, Gviz, TxDb.Mmusculus.UCSC.mm9.knownGene, RUnit
 Collate: utils.R
 	 SplicingGraphs-class.R
+	 sgdf-methods.R
+	 sgraph-methods.R
 	 countReads.R
 	 toy_data.R
 biocViews: Genetics, Annotation, HighThroughputSequencing
