--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ Depends: BiocGenerics, IRanges (>= 1.17.31), GenomicRanges,
 Imports: methods, utils, igraph,
 	 BiocGenerics, IRanges, GenomicRanges,
 	 graph, Rgraphviz, GenomicFeatures, Rsamtools
-Suggests: igraph, Gviz, TxDb.Mmusculus.UCSC.mm9.knownGene, RUnit
+Suggests: igraph, Gviz,
+	 TxDb.Mmusculus.UCSC.mm9.knownGene, RNASeqDataSubset,
+	 RUnit
 Collate: utils.R
 	 SplicingGraphs-class.R
 	 sgdf-methods.R
