- Make SplicingGraphs() a generic function with methods for GRangesList and   TranscriptDb objects. - More progress (45%) on the vignette.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73938 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Imports: methods, utils, igraph,
 	 BiocGenerics, IRanges, GenomicRanges,
 	 graph, Rgraphviz, GenomicFeatures, Rsamtools
 Suggests: igraph, Gviz,
+	 TxDb.Hsapiens.UCSC.hg19.knownGene,
 	 TxDb.Mmusculus.UCSC.mm9.knownGene, RNASeqDataSubset,
 	 RUnit
 Collate: utils.R
