Rename sgdf() and sgdf2() -> sgedges() and sgedges2().
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73957 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,8 +19,9 @@ Suggests: igraph, Gviz,
 	 RUnit
 Collate: utils.R
 	 SplicingGraphs-class.R
-	 sgdf-methods.R
+	 sgedges-methods.R
 	 sgraph-methods.R
+	 bubbles-methods.R
 	 countReads.R
 	 toy_data.R
 biocViews: Genetics, Annotation, HighThroughputSequencing
