Add sgnodes() extractor.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73958 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -71,6 +71,7 @@ export(
     spath,
     UATXHcount,
     sgedges,
+    sgnodes,
     uninformativeSSids,
 
     ## sgraph-methods.R:
@@ -83,6 +84,7 @@ exportMethods(
     spath,
     UATXHcount,
     sgedges,
+    sgnodes,
     uninformativeSSids,
     sgraph
 )
