Add bubbles() for extracting the bubbles of a splicing graph.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73962 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -75,7 +75,10 @@ export(
     uninformativeSSids,
 
     ## sgraph-methods.R:
-    sgraph
+    sgraph,
+
+    ## bubbles-methods.R:
+    bubbles
 )
 
 ### Exactly the same list as above.
@@ -86,6 +89,7 @@ exportMethods(
     sgedges,
     sgnodes,
     uninformativeSSids,
-    sgraph
+    sgraph,
+    bubbles
 )
 
