Rename spath() -> txpaths().
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@73979 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,7 +68,7 @@ export(
     SplicingGraphs,
 
     ## sgedges-methods.R:
-    spath,
+    txpaths,
     UATXHcount,
     sgedges,
     sgnodes,
@@ -84,7 +84,7 @@ export(
 ### Exactly the same list as above.
 exportMethods(
     SplicingGraphs,
-    spath,
+    txpaths,
     UATXHcount,
     sgedges,
     sgnodes,
