Add the outdeg() and indeg() extractors.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@74055 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ export(
     UATXHcount,
     sgedges,
     sgnodes,
+    outdeg, indeg,
     uninformativeSSids,
 
     ## sgraph-methods.R:
@@ -88,6 +89,7 @@ exportMethods(
     UATXHcount,
     sgedges,
     sgnodes,
+    outdeg, indeg,
     uninformativeSSids,
     sgraph,
     bubbles
