- Add file containing 50 Most Frequent Patterns of Internal Complete Events   Found in Human, as reported in Table 1 of Sammeth M. 2009 paper. - Use the above data to provide bubble description, when available.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@74063 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,4 +24,5 @@ Collate: utils.R
 	 bubbles-methods.R
 	 countReads.R
 	 toy_data.R
+	 zzz.R
 biocViews: Genetics, Annotation, HighThroughputSequencing
