Change SplicingGraphs class definition and API so SplicingGraphs objects are now list-like objects with 1 gene per list element.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@74180 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,12 +25,7 @@ exportClasses(SplicingGraphs)
 ###
 
 exportMethods(
-    length,
-    names,
-    elementLengths,
-    plot,
-    findOverlaps,
-    encodeOverlaps
+    plot
 )
 
 
