Another change to the SplicingGraphs class definition so that only the following restricted API is available for these objects: length(), names(), [, [[, elementLengths(), and unlist(). That's all we need for now.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@74197 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,12 @@ exportClasses(SplicingGraphs)
 ###
 
 exportMethods(
+    length,
+    names,
+    "[",
+    "[[",
+    elementLengths,
+    unlist,
     plot
 )
 
