Add cache mechanism for the bubbles of a SplicingGraphs object.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@74373 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ exportMethods(
 
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-### Export non-generic functions
+### Export non-generic functions (and non-function symbols)
 ###
 
 export(
@@ -46,6 +46,9 @@ export(
     ## sgraph-methods.R:
     sgraph2,
     slideshow,
+
+    ## bubbles-methods.R:
+    ASCODE2DESC,
 
     ## countReads.R:
     assignSubfeatureHits,
