Numerous tweaks to have new("SplicingGraphs") return a valid SplicingGraphs object (of length 0).
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@74636 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ importFrom(Rgraphviz, agopen)
 import(GenomicFeatures)
 import(Rsamtools)
 
-exportClasses(SplicingGraphs)
+exportClasses(.SplicingGraphGenes, SplicingGraphs)
 
 
 ### - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
