Add assignReads() for assigning reads to a SplicingGraphs object.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@74846 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,7 +52,7 @@ export(
     ASCODE2DESC,
 
     ## countReads.R:
-    assignSubfeatureHits,
+    assignReads,
 
     ## toy_data.R:
     toy_genes_gff,
