Renamed txpaths() -> txpath().
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75014 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,9 +80,11 @@ export(
     ## sgedgesByTranscript-methods.R:
     sgedgesByTranscript,
 
-    ## sgedges-methods.R:
-    txpaths,
+    ## txpath-methods.R:
+    txpath,
     UATXHcount,
+
+    ## sgedges-methods.R:
     sgedges,
     sgnodes,
     outdeg, indeg,
@@ -100,7 +102,7 @@ exportMethods(
     plotTranscripts,
     SplicingGraphs,
     sgedgesByTranscript,
-    txpaths,
+    txpath,
     UATXHcount,
     sgedges,
     sgnodes,
