- Add 'keep.exon.mcols' and 'keep.hits.mcols' to sgedgesByTranscript(). - Add sgedgesByGene().
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75107 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -79,6 +79,7 @@ export(
 
     ## sgedgesByTranscript-methods.R:
     sgedgesByTranscript,
+    sgedgesByGene,
 
     ## txpath-methods.R:
     txpath,
@@ -102,6 +103,7 @@ exportMethods(
     plotTranscripts,
     SplicingGraphs,
     sgedgesByTranscript,
+    sgedgesByGene,
     txpath,
     UATXHcount,
     sgedges,
