--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: SplicingGraphs
 Title: Tools for creating splicing graphs from annotations and RNA-Seq data
-Version: 0.8.3
+Version: 0.8.4
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
-Description: This package provides tools for creating splicing graphs based on
-	transcript annotations and additionally tools for testing for
-	differential splicing event usage based on genomic count data from
-	RNA-seq experiments. 
+Description: This package allows the user to create and manipulate splicing
+	graphs based on annotations that describe a gene model for a given
+	organism. Additionally the package allows the user to assign RNA-seq
+	reads to splicing graphs, and to count them.
 Maintainer: H. Pages <hpages@fhcrc.org>
 Depends: BiocGenerics, IRanges (>= 1.17.43), GenomicRanges,
 	 Rgraphviz (>= 2.3.7), GenomicFeatures (>= 1.11.8), Rsamtools
