- Add 'keep.dup.edges' arg to sgedgesByGene(). - Fix and optimize countReads(). Current version is about 70x faster than   initial version.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75118 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,7 +77,7 @@ export(
     plotTranscripts,
     SplicingGraphs,
 
-    ## sgedgesByTranscript-methods.R:
+    ## sgedgesByGene-methods.R:
     sgedgesByTranscript,
     sgedgesByGene,
 
