--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SplicingGraphs
 Title: Tools for creating splicing graphs from annotations and RNA-Seq data
-Version: 0.8.4
+Version: 0.8.5
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package allows the user to create and manipulate splicing
@@ -20,7 +20,7 @@ Suggests: igraph, Gviz,
 Collate: utils.R
 	 igraph-utils.R
 	 SplicingGraphs-class.R
-	 sgedgesByTranscript-methods.R
+	 sgedgesByGene-methods.R
 	 txpath-methods.R
 	 sgedges-methods.R
 	 sgraph-methods.R
