Move plotTranscripts() to its own .R and .Rd files.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75209 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: SplicingGraphs
 Title: Tools for creating splicing graphs from annotations and RNA-Seq data
-Version: 0.98.2
+Version: 0.98.3
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package allows the user to create and manipulate splicing
@@ -20,6 +20,7 @@ Suggests: igraph, Gviz,
 Collate: utils.R
 	 igraph-utils.R
 	 SplicingGraphs-class.R
+	 plotTranscripts-methods.R
 	 sgedgesByGene-methods.R
 	 txpath-methods.R
 	 sgedges-methods.R
