- Rename UATXHcount() accessor -> txweight(). - Add txweight() setter for SplicingGraphs objects.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75217 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -84,7 +84,7 @@ export(
 
     ## txpath-methods.R:
     txpath,
-    UATXHcount,
+    txweight, "txweight<-",
 
     ## sgedges-methods.R:
     sgedges,
@@ -106,7 +106,7 @@ exportMethods(
     sgedgesByTranscript,
     sgedgesByGene,
     txpath,
-    UATXHcount,
+    txweight, "txweight<-",
     sgedges,
     sgnodes,
     outdeg, indeg,
