Add SplicingGraphs-package.Rd and simplify cross-linking of man pages.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75220 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: SplicingGraphs
-Title: Tools for creating splicing graphs from annotations and RNA-Seq data
+Title: Creation, manipulation, visualization of splicing graphs
 Version: 0.99.0
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
-Description: This package allows the user to create and manipulate splicing
-	graphs based on annotations that describe a gene model for a given
-	organism. Additionally the package allows the user to assign RNA-seq
-	reads to splicing graphs, and to count them.
+Description: This package allows the user to create, manipulate, and visualize
+	splicing graphs and their bubbles based on a gene model for a given
+	organism. Additionally it allows the user to assign RNA-seq reads to
+	the edges of a set of splicing graphs, and to summarize them.
 Maintainer: H. Pages <hpages@fhcrc.org>
 Depends: BiocGenerics, IRanges (>= 1.17.43), GenomicRanges (>= 1.11.45),
 	 Rgraphviz (>= 2.3.7), GenomicFeatures (>= 1.11.8), Rsamtools
