countReads() now allows counting by *reduced* splicing graph edge in addition to counting by splicing graph edge. This is controlled via the new 'by' argument.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75609 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,7 +56,6 @@ export(
 
     ## countReads.R:
     assignReads,
-    countReads,
 
     ## toy_data.R:
     toy_genes_gff,
@@ -100,7 +99,10 @@ export(
 
     ## rsgedgesByGene-methods.R:
     rsgedgesByTranscript,
-    rsgedgesByGene
+    rsgedgesByGene,
+
+    ## countReads.R:
+    countReads
 )
 
 ### Exactly the same list as above.
@@ -118,6 +120,7 @@ exportMethods(
     sgraph,
     bubbles,
     rsgedgesByTranscript,
-    rsgedgesByGene
+    rsgedgesByGene,
+    countReads
 )
 
