o Move sgedges2(), uninformativeSSids(), and sgraph2() to   R/rsgedgesByGene-methods.R o Rename sgedges2() -> rgedges() and sgraph2() -> rsgraph(). Keep old names as   aliases to new names.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75704 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,11 +44,7 @@ exportMethods(
 ###
 
 export(
-    ## sgedges-methods.R:
-    sgedges2,
-
     ## sgraph-methods.R:
-    sgraph2,
     slideshow,
 
     ## bubbles-methods.R:
@@ -89,7 +85,6 @@ export(
     sgedges,
     sgnodes,
     outdeg, indeg,
-    uninformativeSSids,
 
     ## sgraph-methods.R:
     sgraph,
@@ -98,8 +93,11 @@ export(
     bubbles,
 
     ## rsgedgesByGene-methods.R:
+    uninformativeSSids,
     rsgedgesByTranscript,
     rsgedgesByGene,
+    rsgedges, sgedges2,
+    rsgraph, sgraph2,
 
     ## countReads.R:
     countReads
