Add man page for rsgedgesByGene() and family.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@75782 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,10 @@ export(
     ## sgraph-methods.R:
     slideshow,
 
+    ## rsgedgesByGene-methods.R:
+    rsgedges, sgedges2,
+    rsgraph, sgraph2,
+
     ## bubbles-methods.R:
     ASCODE2DESC,
 
@@ -89,15 +93,13 @@ export(
     ## sgraph-methods.R:
     sgraph,
 
-    ## bubbles-methods.R:
-    bubbles,
-
     ## rsgedgesByGene-methods.R:
     uninformativeSSids,
     rsgedgesByTranscript,
     rsgedgesByGene,
-    rsgedges, sgedges2,
-    rsgraph, sgraph2,
+
+    ## bubbles-methods.R:
+    bubbles,
 
     ## countReads.R:
     countReads
@@ -114,11 +116,11 @@ exportMethods(
     sgedges,
     sgnodes,
     outdeg, indeg,
-    uninformativeSSids,
     sgraph,
-    bubbles,
+    uninformativeSSids,
     rsgedgesByTranscript,
     rsgedgesByGene,
+    bubbles,
     countReads
 )
 
