Starting unit tests + other minor tweaks.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@76087 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,7 @@ Collate: utils.R
 	 sgraph-methods.R
 	 rsgedgesByGene-methods.R
 	 bubbles-methods.R
-	 countReads.R
+	 countReads-methods.R
 	 toy_data.R
 	 zzz.R
 biocViews: Genetics, Annotation, HighThroughputSequencing
