--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,7 +54,7 @@ export(
     ## bubbles-methods.R:
     ASCODE2DESC,
 
-    ## countReads.R:
+    ## countReads-methods.R:
     assignReads,
     removeReads,
 
@@ -102,7 +102,7 @@ export(
     ## bubbles-methods.R:
     bubbles,
 
-    ## countReads.R:
+    ## countReads-methods.R:
     countReads
 )
 
