Split countReads-methods.R into 2 units: assignReads.R and countReads-methods.R
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@76089 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,7 +54,7 @@ export(
     ## bubbles-methods.R:
     ASCODE2DESC,
 
-    ## countReads-methods.R:
+    ## assignReads.R:
     assignReads,
     removeReads,
 
