--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Collate: utils.R
 	 sgraph-methods.R
 	 rsgedgesByGene-methods.R
 	 bubbles-methods.R
+	 assignReads.R
 	 countReads-methods.R
 	 toy_data.R
 	 zzz.R
