--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(
     bubbles,
 
     ## countReads-methods.R:
+    getReads,
     countReads
 )
 
@@ -121,6 +122,7 @@ exportMethods(
     rsgedgesByTranscript,
     rsgedgesByGene,
     bubbles,
+    getReads,
     countReads
 )
 
