- Rename getReads() -> reportReads(). - Complete man page for countReads()/reportReads().
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@76132 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,7 +102,7 @@ export(
     bubbles,
 
     ## countReads-methods.R:
-    getReads,
+    reportReads,
     countReads
 )
 
@@ -122,7 +122,7 @@ exportMethods(
     rsgedgesByTranscript,
     rsgedgesByGene,
     bubbles,
-    getReads,
+    reportReads,
     countReads
 )
 
