--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: SplicingGraphs
-Title: Creation, manipulation, visualization of splicing graphs
+Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
+	to them
 Version: 1.1.8
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
