Use new RNAseqData.HeLa.bam.chr14 dataset in the vignette instead of TBX20BamSubset.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@76720 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.1.9
+Version: 1.1.10
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package allows the user to create, manipulate, and visualize
@@ -17,8 +17,7 @@ Imports: methods, utils, igraph,
 	 IRanges, GenomicRanges, GenomicFeatures,
 	 graph, Rgraphviz
 Suggests: igraph, Gviz, Rsamtools,
-	 TxDb.Hsapiens.UCSC.hg19.knownGene,
-	 TxDb.Mmusculus.UCSC.mm9.knownGene, TBX20BamSubset,
+	 TxDb.Hsapiens.UCSC.hg19.knownGene, RNAseqData.HeLa.bam.chr14,
 	 RUnit
 Collate: utils.R
 	 igraph-utils.R
