Export "show" method.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@80627 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ exportClasses(GeneModel, SplicingGraphs)
 exportMethods(
     length,
     names,
+    show,
     "[",
     "[[",
     elementLengths,
