need to import new GenomicAlignments package
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@84015 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ import(BiocGenerics)
 import(IRanges)
 import(GenomicRanges)
 import(GenomicFeatures)
+import(GenomicAlignments)
 
 importFrom(graph, nodeDataDefaults, nodeData,
                   edgeDataDefaults, edgeNames, edgeData)
