--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.3.2
+Version: 1.3.3
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package allows the user to create, manipulate, and visualize
@@ -11,11 +11,11 @@ Description: This package allows the user to create, manipulate, and visualize
         different ways.
 Maintainer: H. Pages <hpages@fhcrc.org>
 Depends: BiocGenerics,
-	 IRanges (>= 1.17.43), GenomicRanges (>= 1.13.5), GenomicFeatures,
-	 Rgraphviz (>= 2.3.7)
+	 IRanges (>= 1.17.43), GenomicRanges (>= 1.15.12), GenomicFeatures,
+	 GenomicAlignments (>= 0.99.6), Rgraphviz (>= 2.3.7)
 Imports: methods, utils, igraph,
 	 BiocGenerics,
-	 IRanges, GenomicRanges, GenomicFeatures,
+	 IRanges, GenomicRanges, GenomicFeatures, GenomicAlignments,
 	 graph, Rgraphviz
 Suggests: igraph, Gviz, Rsamtools,
 	 TxDb.Hsapiens.UCSC.hg19.knownGene, RNAseqData.HNRNPC.bam.chr14,
