--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,37 +1,26 @@
 Package: SplicingGraphs
-Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
-	to them
-Version: 1.3.4
+Title: Create, manipulate, visualize splicing graphs, and assign
+        RNA-seq reads to them
+Version: 1.3.5
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
-Description: This package allows the user to create, manipulate, and visualize
-	splicing graphs and their bubbles based on a gene model for a given
-	organism. Additionally it allows the user to assign RNA-seq reads to
-	the edges of a set of splicing graphs, and to summarize them in
-        different ways.
+Description: This package allows the user to create, manipulate, and
+        visualize splicing graphs and their bubbles based on a gene
+        model for a given organism. Additionally it allows the user to
+        assign RNA-seq reads to the edges of a set of splicing graphs,
+        and to summarize them in different ways.
 Maintainer: H. Pages <hpages@fhcrc.org>
-Depends: BiocGenerics,
-	 IRanges (>= 1.17.43), GenomicRanges (>= 1.15.12), GenomicFeatures,
-	 GenomicAlignments (>= 0.99.6), Rgraphviz (>= 2.3.7)
-Imports: methods, utils, igraph,
-	 BiocGenerics,
-	 IRanges, GenomicRanges, GenomicFeatures, GenomicAlignments,
-	 graph, Rgraphviz
-Suggests: igraph, Gviz, Rsamtools,
-	 TxDb.Hsapiens.UCSC.hg19.knownGene, RNAseqData.HNRNPC.bam.chr14,
-	 RUnit
-Collate: utils.R
-	 igraph-utils.R
-	 SplicingGraphs-class.R
-	 plotTranscripts-methods.R
-	 sgedgesByGene-methods.R
-	 txpath-methods.R
-	 sgedges-methods.R
-	 sgraph-methods.R
-	 rsgedgesByGene-methods.R
-	 bubbles-methods.R
-	 assignReads.R
-	 countReads-methods.R
-	 toy_data.R
-	 zzz.R
-biocViews: Genetics, Annotation, DataRepresentation, Visualization, Sequencing, RNAseq, GeneExpression
+Depends: BiocGenerics, IRanges (>= 1.17.43), GenomicRanges (>=
+        1.15.12), GenomicFeatures, GenomicAlignments (>= 0.99.6),
+        Rgraphviz (>= 2.3.7)
+Imports: methods, utils, igraph, BiocGenerics, IRanges, GenomicRanges,
+        GenomicFeatures, GenomicAlignments, graph, Rgraphviz
+Suggests: igraph, Gviz, Rsamtools, TxDb.Hsapiens.UCSC.hg19.knownGene,
+        RNAseqData.HNRNPC.bam.chr14, RUnit
+Collate: utils.R igraph-utils.R SplicingGraphs-class.R
+        plotTranscripts-methods.R sgedgesByGene-methods.R
+        txpath-methods.R sgedges-methods.R sgraph-methods.R
+        rsgedgesByGene-methods.R bubbles-methods.R assignReads.R
+        countReads-methods.R toy_data.R zzz.R
+biocViews: Genetics, Annotation, DataRepresentation, Visualization,
+        Sequencing, RNASeq, GeneExpression
