use new spelling for biocViews term: RNASeq instead of RNAseq
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@87128 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,4 +34,4 @@ Collate: utils.R
 	 countReads-methods.R
 	 toy_data.R
 	 zzz.R
-biocViews: Genetics, Annotation, DataRepresentation, Visualization, Sequencing, RNAseq, GeneExpression
+biocViews: Genetics, Annotation, DataRepresentation, Visualization, Sequencing, RNASeq, GeneExpression
