--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ importFrom(igraph, graph.data.frame, get.data.frame, layout.kamada.kawai,
 
 
 import(BiocGenerics)
-
+import(S4Vectors)
 import(IRanges)
 import(GenomicRanges)
 import(GenomicFeatures)
