--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.7.1
+Version: 1.7.2
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package allows the user to create, manipulate, and visualize
@@ -18,7 +18,7 @@ Imports: methods, utils, igraph,
 	 BiocGenerics,
 	 IRanges, GenomicRanges, GenomicFeatures, GenomicAlignments,
 	 graph, Rgraphviz
-Suggests: igraph, Gviz, Rsamtools,
+Suggests: igraph, Gviz, Rsamtools (>= 1.19.17),
 	 TxDb.Hsapiens.UCSC.hg19.knownGene, RNAseqData.HNRNPC.bam.chr14,
 	 RUnit
 Collate: utils.R
