Rsamtools is now required instead of suggested only
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@98136 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ import(IRanges)
 import(GenomeInfoDb)
 import(GenomicRanges)
 import(GenomicFeatures)
+importFrom(Rsamtools, asBam)
 import(GenomicAlignments)
 
 importFrom(graph, nodeDataDefaults, nodeData,
