--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.7.3
+Version: 1.7.4
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package allows the user to create, manipulate, and visualize
@@ -14,8 +14,8 @@ Depends: GenomicFeatures (>= 1.17.13), GenomicAlignments (>= 1.1.22),
 	 Rgraphviz (>= 2.3.7)
 Imports: methods, utils, igraph,
 	 BiocGenerics, S4Vectors, IRanges, GenomeInfoDb, GenomicRanges,
-	 GenomicFeatures, GenomicAlignments, graph, Rgraphviz
-Suggests: igraph, Gviz, Rsamtools (>= 1.19.17),
+	 GenomicFeatures, Rsamtools, GenomicAlignments, graph, Rgraphviz
+Suggests: igraph, Gviz,
 	 TxDb.Hsapiens.UCSC.hg19.knownGene, RNAseqData.HNRNPC.bam.chr14,
 	 RUnit
 Collate: utils.R
