--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: SplicingGraphs
 Title: Create, manipulate, visualize splicing graphs, and assign RNA-seq reads
 	to them
-Version: 1.9.0
+Version: 1.9.1
 Author: D. Bindreither, M. Carlson, M. Morgan, H. Pages
 License: Artistic-2.0
 Description: This package allows the user to create, manipulate, and visualize
@@ -32,4 +32,4 @@ Collate: utils.R
 	 countReads-methods.R
 	 toy_data.R
 	 zzz.R
-biocViews: Genetics, Annotation, DataRepresentation, Visualization, Sequencing, RNASeq, GeneExpression
+biocViews: Genetics, Annotation, DataRepresentation, Visualization, Sequencing, RNASeq, GeneExpression, AlternativeSplicing, Transcription
