fix vignette failure caused by update to TxDb.Hsapiens.UCSC.hg19.knownGene
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/SplicingGraphs@107854 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,7 +36,7 @@ exportMethods(
     unlist,
     seqnames,
     strand,
-    seqinfo,
+    seqinfo, "isCircular<-",
     intronsByTranscript,
     plot
 )
